# sandflow

./: .env.example  .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  rxconfig.py
codex-runner/: esbuild.config.mjs  package.json  tsconfig.json
codex-runner/src/: index.ts
monrovia_demo/: __init__.py  app.py  models.py  workflow_runner.py
monrovia_demo/components/: common.py
monrovia_demo/docker_sandbox/: Dockerfile
monrovia_demo/pages/: __init__.py  builder.py
monrovia_demo/state/: __init__.py
python-sidecar/: pyproject.toml
python-sidecar/src/sandflow_sidecar/: __init__.py  __main__.py  contract.py  run_manager.py  storage.py  workflow_registry.py  workflow_runner.py
python-sidecar/src/sandflow_sidecar/sandbox_skills/office-artifacts/scripts/: create_pptx.py
python-sidecar/tests/: conftest.py  test_contract.py  test_models_and_registry.py  test_workflow_runner_progress.py
sandflow/: app.py  storage.py  workflow_runner.py  workflow_templates.py
sandflow/components/: __init__.py  common.py
sandflow/docker_sandbox/: requirements.txt
sandflow/pages/: builder.py  user.py
sandflow/state/: builder_state.py  user_state.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: customise.rs  lib.rs  main.rs  util.rs
tests/: test_models_and_registry.py  test_workflow_runner_progress.py
web/: next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
web/app/: globals.css  layout.tsx  page.tsx
web/components/: app-shell.tsx  builder-console.tsx  (+4 more)
(+11 files in other folders)
