[project]
name = "monrovia-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai-agents>=0.14.1",
    "openpyxl>=3.1.5",
    "pypdf>=6.10.2",
    "pytest>=8.4.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-pptx>=1.0.2",
    "reflex>=0.8.28.post1",
]
