[project]
name = "sandflow-sidecar"
version = "0.1.0"
description = "Python sidecar for the Sandflow desktop app"
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
    "docker>=7.1.0",
    "fastapi>=0.116.1",
    "openai-agents>=0.14.1",
    "openpyxl>=3.1.5",
    "openai>=1.107.2",
    "pypdf>=6.10.2",
    "pytest>=8.4.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.20",
    "python-pptx>=1.0.2",
    "sse-starlette>=2.3.6",
    "uvicorn>=0.35.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sandflow_sidecar"]

[tool.pytest.ini_options]
testpaths = ["tests"]
